2008-09-05  Alper KANAT  <alperkanat@gmail.com>

	* settings-example.py, extra/messages.py, users/views.py: bundled
	session_messages app into raptiye.. this saves a lot of time for me on the
	production server..
	* blog/feeds.py, templates/frontpage/base.html, urls.py: raptiye now also
	has atom feed.. :)
	* comments/views.py: fixed a bug for comments..
	* media/js/raptiye.js: Closed the debugging mode of JS..
	* blog/feeds.py: No need to have try-except in the blocks because raptiye
	doesn't work without the frontpage..
	* frontpage/models.py: Change default limit of rss from 5 to 10..
	* templates/frontpage/base.html: closing the meta tag..
	* templates/feeds/latest_title.html,
	templates/feeds/latest_description.html: some rss validation improvement..
	* urls.py: changed the rss feed name..
	
2008-09-04  Alper KANAT  <alperkanat@gmail.com>

	* settings-example.py, extra/initials.py: removed english mail address..
	* extra/messages.py, blog/views.py, users/views.py: Corrected bugs that my
	friends are talking about.. Added a function to handle messaging to the
	user..
	* templates/blog/detail.html: thanks to Ozan GÜVEN, the detail page now
	shows the title of the entry as page title..
	* users/forms.py: thanks to Ozan GÜVEN, username validation is added..
	
2008-09-03  Alper KANAT  <alperkanat@gmail.com>

	* media/js/raptiye.js, comments/views.py, users/views.py,
	templates/users/profile.html, templates/blog/comments.html: Removed all
	hardcoded stupid lines within ajax responses..
	* blog/views.py, templates/blog/homepage.html: Changed all messages into a
	tuple since I have to loop over the messages to read them..
	* extra/wordpress.py: changed the database name to wordpress..
	* templates/users/profile.html: gravatar popup now works with enter key..
	* users/views.py: fixed a bug that was a really stupid mistake..
	
2008-09-02  Alper KANAT  <alperkanat@gmail.com>

	* extra/wordpress.py: Fixed some importer bug..